<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".BattleActivity">

    <TextView
        android:id="@+id/textViewPlayerWins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewPlayerWins"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imageViewPlayerPhoto"/>

    <ImageView
        android:id="@+id/imageViewPlayerPhoto"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:minHeight="100dp"
        android:maxHeight="100dp"
        android:minWidth="100dp"
        android:maxWidth="100dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/imageViewPlayerPhoto"
        android:src="@drawable/blank_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPlayerWins"
        app:layout_constraintBottom_toTopOf="@id/textViewBattleVS"/>

    <TextView
        android:id="@+id/textViewBattleVS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewBattleVS"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewPlayerPhoto"
        app:layout_constraintBottom_toTopOf="@id/imageViewComputerPhoto"/>

    <ImageView
        android:id="@+id/imageViewComputerPhoto"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:minHeight="100dp"
        android:maxHeight="100dp"
        android:minWidth="100dp"
        android:maxWidth="100dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/imageViewPlayerPhoto"
        android:src="@drawable/blank_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewBattleVS"
        app:layout_constraintBottom_toTopOf="@id/textViewComputerWins"/>


    <TextView
        android:id="@+id/textViewComputerWins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewComputerWins"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewComputerPhoto"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btnTempGoToScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/black"
        android:text="Temp: Go To Score Screen"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>